--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
+    "@supabase/supabase-js": "^2.45.4",
     "core-js": "^3.37.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
